# mx

./: .clangd  .editorconfig  .gitignore  .gitmodules  Cargo.toml  Makefile  TODO.md  ]  build.rs  mxc  out.txt  test.py
.github/workflows/: ci.yaml
.hooks/: install
cli/: Cargo.toml
cli/src/: main.rs  server.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  server.rs
crates/mx/src/: ast.rs  c_emitter.rs  comptime.rs  diag.rs  interpreter.rs  lib.rs  mxir.rs  parser.rs  position.rs  sema.rs  source_file.rs  symbol_table.rs
crates/tree-sitter-mx/: grammar.js
docs/: compilation.md  lang.md
examples/: hello_world.mx  hello_world.mx.svir  hello_world.mxir
hooks/: commit-msg  install
mx/: Cargo.toml  build.rs
mx/src/: comptime.rs  diag.rs  lib.rs  mxir.rs  parser.rs  source_file.rs
src/: arena.c  arena.h  array_list.h  ast.h  cir.h  codegen.c  codegen.h  comptime_value.c  comptime_value.h  debug.c  debug.h  diag.c  diag.h  diag.rs  emitter.c  emitter.h  io.c  io.h  libmx.h  loc.c  loc.h  main.c  main.rs  map.c  map.h  mem.c  mem.h  mxir.c  mxir.h  mxir.rs  parser.c  parser.h  parser.rs  query.rs  sema.c  sema.h  sema.rs  server.c  server.h  server.rs  (+6 more)
std/: lang.mx
test/: test.py
test/corpus/: 00001_basics.txt  basic.txt
tree-sitter-mx/: CMakeLists.txt  Cargo.toml  Makefile  grammar.js  package.json  tree-sitter.json
tree-sitter-mx/ftdetect/: mx.lua
tree-sitter-mx/plugin/: mx.lua
tree-sitter-mx/queries/: highlights.scm  indents.scm  injections.scm  locals.scm
tree-sitter-mx/src/: grammar.json  node-types.json  parser.c
(+3 files in other folders)
